<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/timeline_card"
        app:cardCornerRadius="5dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:hint="@string/place"
                android:textColor="@color/white"
                android:textColorHint="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/imageView2" />

            <TextView
                android:id="@+id/tv_latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/latitude_timeline"
                android:textColor="@color/white"
                android:textColorHint="#52FFFFFF"
                app:layout_constraintStart_toStartOf="@+id/tv_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />

            <TextView
                android:id="@+id/tv_longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/longitude_timeline"
                android:textColor="@color/white"
                android:textColorHint="#52FFFFFF"
                app:layout_constraintStart_toStartOf="@+id/tv_latitude"
                app:layout_constraintTop_toBottomOf="@+id/tv_latitude" />

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/category"
                android:textColor="@color/white"
                android:textColorHint="#52FFFFFF"
                app:layout_constraintStart_toStartOf="@+id/tv_longitude"
                app:layout_constraintTop_toBottomOf="@+id/tv_longitude" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="11dp"
                android:layout_height="13dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:adjustViewBounds="true"
                android:maxWidth="42dp"
                android:maxHeight="42dp"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_dot" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>